apps/base/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 1000
        runAsGroup: 991
        fsGroup: 991
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.140.1
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: immich-upload
              mountPath: /data
            - name: immich-imports
              mountPath: /imports
          resources:
            requests:
              memory: "256M"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "2"
              nvidia.com/gpu: 1
      volumes:
        - name: immich-upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: immich-imports
          persistentVolumeClaim:
            claimName: immich-imports
