apps/base/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
  - name: http
    port: 80
    targetPort: 2283
    protocol: TCP
  type: ClusterIP
